Fix spacing issue

--- a/web/themes/custom/glazed_subtheme/css/style.css
+++ b/web/themes/custom/glazed_subtheme/css/style.css
@@ -698,7 +698,6 @@ footer .region .az-section .az-column.footer-social .az-text.custom-social-text 
     padding-top:0px !important;
 }
 #block-rocketlandingcontentwithimage .az-element.az-ctnr.az-column.col-sm-4 {
-    padding-left: 0;
     padding-right: 0;
 }
 .human-exploration-category-view .views-col{
@@ -759,7 +758,6 @@ body.path-search ol.pagination, body.path-search ul.pagination {
 }
 #block-rocketlandingcontentwithimage .az-ctnr.container .col-sm-4
 {
-    padding-left: 0px !important;
     padding-right: 0px !important;
 }
 #rocket.page-node-type-landing-page .view-id-landing_image
